test/testcase/version_1/fail/playlist-namespace-nested-broken.xspf
<?xml version="1.0" encoding="UTF-8"?>
<playlist version="1" xmlns="http://xspf.org/ns/0/">
	<trackList />
	<extension application="http://example.com/" xmlns="http://site/namespace/">
		<!-- <extension> already is in the _new_ default namespace! -->
		<three />
	</extension>
</playlist>
